--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -47,4 +47,6 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/BluePrints/Game_BPs/MyGameMode.MyGameMode_C
 
