--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -8,6 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BluePrints/Game_BPs/MyGameMode.MyGameMode_C
+GameDefaultMap=/Game/Maps/SpaceStation.SpaceStation
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -49,5 +50,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
