--- a/ProjectArachne/Config/DefaultInput.ini
+++ b/ProjectArachne/Config/DefaultInput.ini
@@ -48,6 +48,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUp",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
