--- a/ProjectArachne/Config/DefaultInput.ini
+++ b/ProjectArachne/Config/DefaultInput.ini
@@ -43,6 +43,19 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jog",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Prone",Key=X,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Crouch",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Shoot",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Aim",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponMain",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponSub",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponMelee",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SkillUltimate",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SkillPrimary",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SkillSecondary",Key=T,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SkillQuantity",Key=G,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponNext",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponPrevious",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Use",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
