--- a/ProjectArachne/ProjectArachne.uproject
+++ b/ProjectArachne/ProjectArachne.uproject
@@ -15,6 +15,10 @@
 			"Name": "RuntimeMeshComponent",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/ad0b45a6a31e462aba7cf7c790a9c125"
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	]
 }
