Lots of changes
Added beam
Fixed GUI
added GUI for esc
Polished showing GUI
polished 3rd gun GUI not setting up values
Bug polishing about gun and active gun

--- a/ProjectArachne/Config/DefaultInput.ini
+++ b/ProjectArachne/Config/DefaultInput.ini
@@ -55,7 +55,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="WeaponNext",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="WeaponPrevious",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Use",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="Esc",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Esc",Key=F1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
