--- a/ProjectArachne/Config/DefaultGame.ini
+++ b/ProjectArachne/Config/DefaultGame.ini
@@ -9,4 +9,5 @@ Homepage="http://www.PioneeringStudios.com"
 SupportContact=NA
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BD3DD88843A27262648C6385FEF925B0", "Project Arachne")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "8063D8E6447545AE39DC2AB46CEA5585", "Project Arachne (Debug)")
+bUseBorderlessWindow=False
 
