--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -86,6 +86,7 @@ r.SeparateTranslucency=False
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectiles",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,Name="OwnCharacter",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,Name="BeamTrace",DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="AI_Attacks",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
@@ -146,4 +147,6 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=False
 
