build map fix + stuff

--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -109,6 +109,9 @@ r.SeparateTranslucency=False
 [/Script/AIModule.AISystem]
 bAllowControllersAsEQSQuerier=False
 
+[/Script/Engine.RecastNavMesh]
+AgentRadius=35.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -149,4 +152,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
