Uploaded for 0.2.0000 Build
Updated to match the 0.2.0000 Build

--- a/ProjectArachne/Config/DefaultGame.ini
+++ b/ProjectArachne/Config/DefaultGame.ini
@@ -11,3 +11,6 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "BD3DD88843A27262648
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "8063D8E6447545AE39DC2AB46CEA5585", "Project Arachne (Debug)")
 bUseBorderlessWindow=False
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
