--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -111,6 +111,17 @@ bAllowControllersAsEQSQuerier=False
 
 [/Script/Engine.RecastNavMesh]
 AgentRadius=35.000000
+TileSizeUU=1000.000000
+
+[/Script/Engine.NavigationSystem]
+bAutoCreateNavigationData=True
+bAllowClientSideNavigation=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+DataGatheringMode=Instant
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
+DirtyAreasUpdateFreq=60.000000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
