--- a/ProjectArachne/Plugins/CoverGenerator-UE4-master/CoverGenerator.uplugin
+++ b/ProjectArachne/Plugins/CoverGenerator-UE4-master/CoverGenerator.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "CoverGenerator",
-			"Type": "Developer",
+			"Type": "RunTime",
 			"LoadingPhase": "Default"
 		}
 	]
