--- a/ProjectArachne/Config/DefaultEngine.ini
+++ b/ProjectArachne/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-[URL]
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -8,13 +6,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BluePrints/MainMenu_BPs/MainMenuGM.MainMenuGM_C
-<<<<<<< HEAD
 GameDefaultMap=/Game/Maps/SpaceStation.SpaceStation
-EditorStartupMap=/Game/Maps/SpaceStation.SpaceStation
-=======
 GameDefaultMap=/Game/Maps/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/Maps/SpaceStation.SpaceStation
->>>>>>> 77ffca4f112e2c6d1e1a2b9ec9d69d6438f28e03
+EditorStartupMap=/Game/Maps/SpaceStation.SpaceStation
+None=======
 GameInstanceClass=/Game/BluePrints/MainMenu_BPs/ProjectArachne.ProjectArachne_C
 
 [/Script/Engine.GameEngine]
@@ -35,16 +31,14 @@ bAllowP2PPacketRelay=true
 P2PConnectionTimeout=90
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="/Script/OnlineSubsystemSteam.SteamNetConnection"
+NetConnectionClassName=/Script/OnlineSubsystemSteam.SteamNetConnection
 
->>>>>>> 77ffca4f112e2c6d1e1a2b9ec9d69d6438f28e03
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
 r.DBuffer=True
 r.AllowStaticLighting=True
 r.SeparateTranslucency=False
-=======
->>>>>>> 77ffca4f112e2c6d1e1a2b9ec9d69d6438f28e03
+None=======
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -112,6 +106,7 @@ bAllowControllersAsEQSQuerier=True
 [/Script/Engine.RecastNavMesh]
 AgentRadius=35.000000
 TileSizeUU=1000.000000
+RuntimeGeneration=Static
 
 [/Script/Engine.NavigationSystem]
 bAutoCreateNavigationData=True
